syntax="proto3";

package models;

service User{
  rpc  AddUser(UserInfo) returns (Response){}
}

message UserInfo{
  string AccessKey = 1;
  string SecretKey = 2;
  string PolicyName = 3;
  string Status = 4;
  repeated string MemberOf = 5;
}

message Response{
  int64 Code = 1;
  string Msg = 2;
}

// protoc admin.proto --go_out=plugins=grpc:go
